Navigation, progress on detail screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.kareanra.habittrack.view.HabitListDetailActivity"/>
+        <activity android:name="com.kareanra.habittrack.view.HabitDetailActivity"/>
     </application>
 
 </manifest>
