--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlinx-serialization'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs'
 
 ext {
     kotlin_coroutines_version = '1.3.3'
     okhttp3_version = '3.12.1'
     dagger_version = '2.23.2'
     room_version = '2.2.3'
+    nav_version = '2.2.1'
 }
 
 android {
@@ -71,6 +73,10 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Nav
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
