Chart initial commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.kareanra.habittrack.view.HabitDetailActivity"/>
+        <activity android:name="com.kareanra.habittrack.view.GraphViewActivity"/>
     </application>
 
 </manifest>
