--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ ext {
     kotlin_coroutines_version = '1.3.3'
     okhttp3_version = '3.12.1'
     dagger_version = '2.23.2'
-    room_version = '2.2.3'
+    room_version = '2.2.4'
     nav_version = '2.2.1'
 }
 
@@ -88,6 +88,8 @@ dependencies {
 
     implementation 'com.github.kittinunf.result:result:2.2.0'
 //    implementation 'com.github.kittinunf.result:result-coroutines:2.0.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     testImplementation 'junit:junit:4.12'
 
